--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -24,3 +24,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.hover\:bg-sky-700 {
+  &:hover {
+    background-color: var(--color-sky-700);
+  }
+}
